--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [
     "baileysQr",
     "MdLogin",
-    "Suhail-Md",
+    "Makima-Md",
     "whatsapp-bot",
     "pairingCode",
     "waPairingCode",
